--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 	<head>
-		<title>Krishan Patel</title>
+		<title>Stock Chart Viewer</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -12,7 +12,7 @@
 	<body>
 		<div class="overlay"></div>
 		<nav class="navbar navbar-expand-md">
-			<a class="navbar-brand" href="#">Krishan Patel</a>
+			<a class="navbar-brand" href="#">Stock Chart Viewer</a>
 			<button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
