add launching windows with stock symbols - currently hardcoded

--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,13 @@
 		
 		<header class="page-header header container-fluid"></header>
 		<div class="description">
-			<h1>Welcome to my site!</h1>
-			<p>Click on any of the icons above to learn more about me!</p>
+			<h1>Welcome to stock charts!</h1>
+			<!-- <div class="launch-button button">Launch</div> -->
+			<div id="closeAll" class="button">Close All</div>
+		</div>
+		<div id="symbols-content">
+			<div class="lists"></div>
+			<div class="individual"></div>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
